--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigation BAR</title>
-    <link rel="stylesheet" href="../CSS/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 
     <!-- This is the font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
