--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <div id="project_intro">
-        <h1> LUNCH-BOX MANAGEMENT SYSTEM </h1>
+        <h1> Kya Re China</h1>
 
     </div>
 
